Fix Android-compatible workflow file IO